--- a/Index.html
+++ b/Index.html
@@ -2,17 +2,17 @@
 <html>
   <style>
     a:link {
-        color:brown;
+        color:#d42c1c;
         background-color: transparent;
         text-decoration: none;
     }
     a:visited {
-        color:blue;
+        color:rgb(238, 225, 128);
         background-color: transparent;
         text-decoration: none;
     }
     a:hover {
-        color:red
+        color:rgb(163, 96, 1)
     }
   </style>
   <title>Modded Music</title>
@@ -25,5 +25,8 @@
     <h2 style="font-size: 20pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">DM Dokuro.</h2>
     <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">DM Dokuro is a self taught electronic musician mainly known for his work on the Terraria Calamity mod. Born in Greenfield, Massachusetts he is 30 years old (born in 1992). His most viewed songs on youtube are:</p>
     <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">1: <a href="https://www.youtube.com/watch?v=5GcPA3C0QeI">Roar of the Jungle Dragon</a> at 13 million views as of making this project.</p>
+    <p><img style="position: absolute; left: 450pt" src="images/RoarOfJungled.webp" alt="Yharon Phase 2" width="100"></p>
+    <br><br><br>
+    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">2: <a href="https://youtu.be/wjOj_6cMGEY?feature=shared">Devourer of Gods (Nonstop Mix)</a></p>
   </body>
 </html> 
