worked on today

--- a/Index.html
+++ b/Index.html
@@ -19,14 +19,51 @@
   <body bgcolor="#4e1723">
     <h1 style="font-size: 30pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Terraria Modded Music G.O.A.T.</h1>
     <h2>
-      <img style="position: absolute; left: 335pt;" src="images/DMDOKURO.png" alt="DMDOKURO" width="400" >
+      <img src="images/DMDOKURO.png" alt="DMDOKURO" width="400" style="margin-left: auto;margin-right: auto;display: block;" >
     </h2>
     <br><br><br>
     <h2 style="font-size: 20pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">DM Dokuro.</h2>
-    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">DM Dokuro is a self taught electronic musician mainly known for his work on the Terraria Calamity mod. Born in Greenfield, Massachusetts he is 30 years old (born in 1992). His most viewed songs on youtube are:</p>
-    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">1: <a href="https://www.youtube.com/watch?v=5GcPA3C0QeI">Roar of the Jungle Dragon</a> at 13 million views as of making this project.</p>
-    <p><img style="position: absolute; left: 450pt" src="images/RoarOfJungled.webp" alt="Yharon Phase 2" width="100"></p>
+    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Omar C. (Known as DM Dokuro online) is a self taught electronic musician mainly known for his work on the Terraria Calamity mod. Born in Greenfield, Massachusetts he is 30 years old (born in 1992). He was the one that sculpted my current day taste in music.</p>
+    <table cellspacing="1" cellpadding="5" border="3" bgcolor="#5a2634" bordercolor="#a7133b" style="margin-left: auto;margin-right: auto;">
+      <tr>
+        <td colspan="4" style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Most viewed videos on youtube:</td>
+      </tr>
+      <tr>
+        <th style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Name:</th>
+        <th style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Views:</th>
+        <th style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Likes:</th>
+        <th style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Thumbnail:</th>
+      </tr>
+      <tr>
+        <td><a href="https://www.youtube.com/watch?v=5GcPA3C0QeI" target="_blank">Roar of the Jungle Dragon</a></td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">13 Million</td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">132 Thousand</td>
+        <td><img style="margin-left: auto;margin-right: auto;display: block;" src="images/RoarOfJungled.webp" alt="Yharon Phase 2" width="200"></td>
+      </tr>
+      <tr>
+        <td><a href="https://youtu.be/wjOj_6cMGEY?feature=shared" target="_blank">Devourer of Gods (Nonstop Mix)</a></td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">11 Million</td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">105 Thousand</td>
+        <td><img style="margin-left: auto;margin-right: auto;display: block;" src="images/DOGNS.png" alt="Devourer of Gods" width="200"></td>
+      </tr>
+      <tr>
+        <td><a href="https://youtu.be/wjOj_6cMGEY?feature=shared" target="_blank">Stained, Brutal Calamity</a></td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">8.5 Million</td>
+        <td style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">77 Thousand</td>
+        <td><img style="margin-left: auto;margin-right: auto;display: block;" src="images/STBC.png" alt="Supreme Calamitas" width="200"></td>
+      </tr>
+    </table>
+    <h2 style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">My favorite songs of his</h2>
+    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;"> While it has already showed up here, my favorite song of DM Dokuro, which has also been my favorite song in general since 2018. Is Devourer of Gods (Nonstop Mix)</p>
+    <iframe width="400" height="200" src="https://www.youtube.com/embed/wjOj_6cMGEY?si=jLRIumGqTJwDVYPP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: auto;margin-right: auto;display: block;"></iframe>
+    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">My second favorite song of his has not appeared in this page yet, however it is titled "Catastrophes before the calamity"</p>
+    <iframe width="400" height="200" src="https://www.youtube.com/embed/QRuwCLF6rBM?si=RiWs9czc-Gb_tOtK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: auto;margin-right: auto;display: block;"></iframe>
+    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">and finally, my third favorite song made by DM Dokuro is titled "Feral Amalgamation"</p>
+    <iframe width="400" height="200" src="https://www.youtube.com/embed/abkUjD3qark?si=DyRsJCogWsiTFFuD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: auto;margin-right: auto;display: block;"></iframe>
     <br><br><br>
-    <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">2: <a href="https://youtu.be/wjOj_6cMGEY?feature=shared">Devourer of Gods (Nonstop Mix)</a></p>
+    <h2 style="color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Music Producers reacting to his music</h2>
+    <p style="text-align: center; font-size: 15pt;font-family: Cascadia Code;"><a href="https://www.youtube.com/watch?v=3ZtylHWlGOo" target="_blank"><u>MarcoMeatball</u></a></p>
+    <p style="text-align: center; font-size: 15pt;font-family: Cascadia Code;"><a href="https://www.youtube.com/watch?v=7Nl3cld52ds&t=42s" target="_blank"><u>Music Theory for Gamers</u></a></p>
+
   </body>
-</html> 
+</html>
