--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
       <img src="images/DMDOKURO.png" alt="DMDOKURO" width="400" style="margin-left: auto;margin-right: auto;display: block;" >
     </h2>
     <br><br><br>
-    <h2 style="font-size: 20pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">DM Dokuro.</h2>
+    <h2 style="font-size: 20pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;"><a href="https://www.youtube.com/@DMDOKURO" target="_blank"><u>DM Dokuro</u></a></h2>
     <p style="font-size: 10pt;color: #f4ffc5;text-align: center;font-family: Cascadia Code;">Omar C. (Known as DM Dokuro online) is a self taught electronic musician mainly known for his work on the Terraria Calamity mod. Born in Greenfield, Massachusetts he is 30 years old (born in 1992). He was the one that sculpted my current day taste in music.</p>
     <table cellspacing="1" cellpadding="5" border="3" bgcolor="#5a2634" bordercolor="#a7133b" style="margin-left: auto;margin-right: auto;">
       <tr>
